tests-integration/tests/roundtrip/invalid/syntax/malformed_line/02/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/malformed_line/02/input.essence:1:15:
  |
1 | letting s be {:}
  |               ^^
Skipped tokens

tests/roundtrip/invalid/syntax/malformed_line/02/input.essence:1:15:
  |
1 | letting s be {:}
  |               ^
Missing }

